Added physics stuff

--- a/.svelte-kit/output/prerendered/pages/index.html
+++ b/.svelte-kit/output/prerendered/pages/index.html
@@ -5,23 +5,23 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link href="./_app/immutable/assets/0.iAfsnpVR.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.BtAvt2Mu.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/2.D3bcCndt.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BH3QesJM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CTx0-UbM.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DDdJCU7q.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.wzEf5Ryn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.C0bs57FV.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.DKVym3Ib.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CtUltbh1.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.BUyZdqt5.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.DQ1Z1htc.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.lwzC_rQ1.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.B5S0hZNg.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Dm3qu3ni.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.DS5UkMoq.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BsepZjka.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.CaJRhXtI.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">  <div class="svelte-xjrkhs"><div class="w-full h-auto p-5 text-2xl text-purple-400 bg-gray-800" data-svelte-h="svelte-1o3720">This is an HTML element inside <span class="bg-slate-200 text-purple-950 w-auto font-mono p-1 rounded-sm">src/components/App.svelte</span></div> <canvas class="svelte-o3oskp"> </canvas> </div> 
+		<div style="display: contents">  <div class="svelte-xjrkhs"><div class="w-full h-auto p-5 text-2xl text-purple-400 bg-gray-800" data-svelte-h="svelte-1qtr5g8">Tone / Threlte Sequencer (wip)</div> <canvas class="svelte-o3oskp"> </canvas> </div> 
 			
 			<script>
 				{
-					__sveltekit_1t81rdo = {
+					__sveltekit_155886r = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/tute-threlte"
 					};
@@ -31,8 +31,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BH3QesJM.js"),
-						import("./_app/immutable/entry/app.CtUltbh1.js")
+						import("./_app/immutable/entry/start.DDdJCU7q.js"),
+						import("./_app/immutable/entry/app.Dm3qu3ni.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
